<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.projects.androidtesting.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:text="@string/enter_some_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/textSize"
        android:id="@+id/textView"
        android:layout_height="wrap_content"/>
    <EditText
        android:minEms="10"
        android:id="@+id/editText"
        android:textSize="@dimen/textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/saveButton"
        android:text="@string/save_the_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/textColor"
        android:textSize="@dimen/textSize"
        android:text="@string/test_color_selected"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="wrap_content"
        android:id="@+id/spinner"
        android:textSize="@dimen/textSize"
        android:layout_height="wrap_content"/>

</LinearLayout>
